# diskus

./: CHANGELOG.md  Cargo.toml  README.md  RELEASE.md
.github/workflows/: CICD.yml
doc/: diskus.1  ku.1
src/: cli.rs  filesize.rs  lib.rs  main.rs  walk.rs
tests/: walk.rs
