[package]
authors = ["David Peter <mail@david-peter.de>"]
categories = ["command-line-utilities"]
description = "A minimal, fast alternative to 'du -sh'."
homepage = "https://github.com/midstreeeam/diskus"
license = "MIT OR Apache-2.0"
name = "diskus"
readme = "README.md"
repository = "https://github.com/midstreeeam/diskus"
version = "0.9.5"
edition = "2021"
default-run = "diskus"
rust-version = "1.80"

[features]
default = ["cli"]
cli = [
    "dep:clap",
    "dep:humansize",
    "dep:num-format",
]

[dependencies]
# Library dependencies
rayon = "1.11"
crossbeam-channel = "0.5"

# CLI dependencies (optional)
humansize = { version = "2.1", optional = true }
num-format = { version = "0.4", optional = true }
clap = { version = "4.5", features = [
    "suggestions",
    "color",
    "wrap_help",
], optional = true }

[dev-dependencies]
tempfile = "3.23"

[[bin]]
name = "diskus"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "ku"
path = "src/bin/ku.rs"
required-features = ["cli"]

[profile.release]
lto = true
codegen-units = 1
